2009-04-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.42

2009-04-20  Gordon Williams <gordon.williams@collabora.co.uk>
	
	NB#94184 - removing the closing effect particle from hildon-desktop 
	and adding it to the theme
	* src/mb/hd-theme.h: Add #define for CLOSING_PARTICLE
	* src/util/hd-transition.h: Remove old particle #define
	* src/util/hd-transition.c
	* src/home/hd-task-navigator.c: Changes to load closing anim particle
	from the theme.
	* data/white-particle.png (Removed): as we use the particle from the
	theme now	

2009-04-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#111908 Task button doesn't respond when the image viewer is opened
	          for the second time.

	HdLauncher remained visible after launching the app for the second time
	because the launcher's private transition engine thought it's coming
	from subview and didn't hide it end the end of transition.

	* src/launcher/hd-launcher.c (hd_launcher_application_tile_clicked):
	  Don't start a mistaken subview-out transition when the launcher
	  is (to be) hidden. (An appropriate main-out transition is already
	  in progress.)

2009-04-20  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#111388 Thumb nails in switcher are overlaping.

	* src/home/hd-task-navigator (navigator_hidden):
	  Don't be confused if a thumbnail is added during zoom+close.

2009-04-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-task-navigator.c (hd_task_navigator_remove_notification):
	Fix Coverity issue when thumb->tnote == NULL.
	* src/launcher/hd-launcher-tile.c (hd_launcher_on_glow_frame): Fix
	Coverity issue when priv->icon_glow == NULL.
	* src/mb/hd-theme.c (back_button_timeout): Silence Coverity by
	checking for c == NULL.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_handle_stackable): Silence
	Coverity by checking for flink == NULL in one case.
	* src/home/hd-home.c (hd_home_constructed): Add check for the return
	value of gtk_style_lookup_color to silence Coverity. Also white space